{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 76,
  "lineage": "cdfe61e6-84f5-fc9c-378d-5a2fa1756187",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "frontend_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/backendAddressPools/frontend-backend-pool",
                "ip_addresses": [],
                "name": "frontend-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/frontendIPConfigurations/frontend-public-ip",
                "name": "frontend-public-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/gatewayIPConfigurations/frontend-gateway-ip",
                "name": "frontend-gateway-ip",
                "subnet_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-application-gateway-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/frontendIPConfigurations/frontend-public-ip",
                "frontend_ip_configuration_name": "frontend-public-ip",
                "frontend_port_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway",
            "identity": [],
            "location": "australiaeast",
            "name": "frontend-gateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/backendAddressPools/frontend-backend-pool",
                "backend_address_pool_name": "frontend-backend-pool",
                "backend_http_settings_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/applicationGateways/frontend-gateway/requestRoutingRules/http-routing-rule",
                "name": "http-routing-rule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "development-Terraform-chatapp",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.frontend_pip",
            "azurerm_resource_group.chatapp_rg",
            "azurerm_subnet.application_gateway_subnet",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/frontendIPConfigurations/backend-frontend-ip",
                "load_balancer_rules": [
                  "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/loadBalancingRules/development-backend-rule"
                ],
                "name": "backend-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/publicIPAddresses/development-backend-lb-pip"
              }
            ],
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb",
            "location": "australiaeast",
            "name": "development-backend-lb",
            "resource_group_name": "development-Terraform-chatapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Compute/virtualMachineScaleSets/backend-vmss/virtualMachines/0/networkInterfaces/backend-nic/ipConfigurations/backend-ipconfig"
            ],
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/backendAddressPools/development-backend-pool",
            "loadbalancer_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb",
            "name": "development-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "backend_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/probes/development-backend-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/loadBalancingRules/development-backend-rule"
            ],
            "loadbalancer_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb",
            "name": "development-backend-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/health"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "backend_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/frontendIPConfigurations/backend-frontend-ip",
            "frontend_ip_configuration_name": "backend-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/loadBalancingRules/development-backend-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb",
            "name": "development-backend-rule",
            "probe_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/loadBalancers/development-backend-lb/probes/development-backend-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.backend_lb",
            "azurerm_lb_probe.backend_probe",
            "azurerm_public_ip.backend_lb_pip",
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "database_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkInterfaces/database-vm-nic",
            "internal_domain_name_suffix": "wmmc0dpju34epi2hs4iz0h3uyg.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "database-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-database-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "australiaeast",
            "mac_address": "7C-1E-52-8A-86-43",
            "name": "database-vm-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "development-Terraform-chatapp",
            "virtual_machine_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Compute/virtualMachines/database-vm"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "database_vm_nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkInterfaces/database-vm-nic|/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/database-vm-nsg-development",
            "network_interface_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkInterfaces/database-vm-nic",
            "network_security_group_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/database-vm-nsg-development"
          },
          "dependencies": [
            "azurerm_network_interface.database_vm_nic",
            "azurerm_network_security_group.database_vm_nsg",
            "azurerm_resource_group.chatapp_rg",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/backend-nsg-development",
            "location": "australiaeast",
            "name": "backend-nsg-development",
            "resource_group_name": "development-Terraform-chatapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database_vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/database-vm-nsg-development",
            "location": "australiaeast",
            "name": "database-vm-nsg-development",
            "resource_group_name": "development-Terraform-chatapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMySQL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/development-frontend-nsg",
            "location": "australiaeast",
            "name": "development-frontend-nsg",
            "resource_group_name": "development-Terraform-chatapp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "backend_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/publicIPAddresses/development-backend-lb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.75.140.72",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "development-backend-lb-pip",
            "resource_group_name": "development-Terraform-chatapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/publicIPAddresses/frontend-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.210.93.30",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "frontend-pip",
            "resource_group_name": "development-Terraform-chatapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_vmss_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/publicIPAddresses/development-frontend-vmss-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.73.195.16",
            "ip_version": "IPv4",
            "location": "australiaeast",
            "name": "development-frontend-vmss-pip",
            "resource_group_name": "development-Terraform-chatapp",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "application_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-application-gateway-subnet",
            "name": "development-application-gateway-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "development-Terraform-chatapp",
            "virtual_network_name": "development-chatapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-backend-subnet",
            "name": "development-backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "development-Terraform-chatapp",
            "virtual_network_name": "development-chatapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-database-subnet",
            "name": "development-database-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "development-Terraform-chatapp",
            "virtual_network_name": "development-chatapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-frontend-subnet",
            "name": "development-frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "development-Terraform-chatapp",
            "virtual_network_name": "development-chatapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-backend-subnet",
            "network_security_group_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/backend-nsg-development",
            "subnet_id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-backend-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.backend_nsg",
            "azurerm_resource_group.chatapp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_virtual_network.chatapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "chatapp_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0d2d18b3-a7e9-477c-a387-97919d1fb4c6",
            "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet",
            "location": "australiaeast",
            "name": "development-chatapp-vnet",
            "resource_group_name": "development-Terraform-chatapp",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-frontend-subnet",
                "name": "development-frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-backend-subnet",
                "name": "development-backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/networkSecurityGroups/backend-nsg-development"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-database-subnet",
                "name": "development-database-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f78b1160-ac53-46e6-b77c-be73847ecb68/resourceGroups/development-Terraform-chatapp/providers/Microsoft.Network/virtualNetworks/development-chatapp-vnet/subnets/development-application-gateway-subnet",
                "name": "development-application-gateway-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.chatapp_rg"
          ]
        }
      ]
    }
  ]
}